# CeliaMusic-NextGen

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
lrc/: lrc1new.json  lrc2new.json  lrc3new.json  lrc4new.json  lrc5new.json
src/: App.tsx
src-tauri/: Cargo.toml  installer-template.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  local_api.rs  media.rs  media_proxy.rs  settings.rs  wallpaper.rs
src/app/: AppShell.tsx  ComponentControlWindow.tsx  ComponentDynamicIslandWindow.tsx  ExploreScreen.tsx  ImmersiveWallpaperWindow.tsx  cache.ts  component-windows.css  componentDynamicIslandSync.ts  immersiveWallpaperSync.ts  styles.css
src/media/: bootstrap.ts  library.ts  types.ts
src/network/: netease.ts  types.ts
src/settings/: bootstrap.ts  store.ts  types.ts
src/tools/: kugou.ts
src/ui/: components.css  components.tsx
