[package]
name = "celia-music-next-gen"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.102"
image = "0.25.10"
lofty = "0.23.3"
id3 = "1.14.0"
uuid = { version = "1.23.0", features = ["serde", "v4"] }
tauri-plugin-dialog = "2"
fontdb = "0.16"
tauri-plugin-global-shortcut = "2.3.1"
url = "2.5.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
symphonia = { version = "0.5.4", features = ["aac", "alac", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }
rustfft = "6.4.0"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = "2"

[target."cfg(windows)".dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }
